--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,7 +8,8 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para,
+.text.child {
   font-size: 14px;
   font-weight: 800;
 }
@@ -27,6 +28,10 @@ body {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
+}
+.button.confirm{
+  background-color: green;
+  color:white;
 }
 
 .child {
